banner part done

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
             </div>
         </nav>
         <!-- ===========Navbar end here========== -->
+        <!-- ===========banner start here========== -->
+        <section class="bg-banner bg-no-repeat bg-cover bg-center py-32">
+            <div class="max-w-container mx-auto">
+                <div class="w-[592px]">
+                    <h6 class="text-base uppercase font-robotocondensed text-white font-bold">Welcome to our CHURCH</h6>
+                    <h1 class="text-banner_heading font-robotocondensed uppercase text-white font-bold pt-4 pb-8">Become a part of our community</h1>
+                    <a href="#" class="inline-block bg-primary py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">Learn more</a>
+                    <p class="w-[338px] mt-16 pl-[30px] font-robotocondensed text-base text-white leading-6 relative after:absolute after:content-[''] after:w-[18px] after:h-0.5 after:bg-primary after:left-0 after:top-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</p>
+                </div>
+            </div>
+        </section>
+        <!-- ===========banner end here========== -->
         <script src="tailwind.config.js"></script>
     </body>
 </html>
