service part done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap"
             rel="stylesheet">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+            integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
@@ -16,7 +20,8 @@
         <nav class="bg-nav_backgroud py-3">
             <div class="max-w-container mx-auto">
                 <div class="flex items-center">
-                    <div class="w-[200px] relative after:absolute after:content-[''] after:w-0.5 after:h-20 after:bg-white after:right-0 after:top-[-24px] after:opacity-10">
+                    <div
+                        class="w-[200px] relative after:absolute after:content-[''] after:w-0.5 after:h-20 after:bg-white after:right-0 after:top-[-24px] after:opacity-10">
                         <img src="images/logo.png" alt>
                     </div>
                     <div class="w-[1080px] flex items-center justify-between">
@@ -39,7 +44,9 @@
                                     class="text-base font-normal text-white uppercase font-robotocondensed opacity-90 hover:opacity-100">Blog</a>
                             </li>
                         </ul>
-                        <a href="#" class="inline-block bg-primary py-5 px-12 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">contact us</a>
+                        <a href="#"
+                            class="inline-block bg-primary py-5 px-12 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">contact
+                            us</a>
                     </div>
                 </div>
             </div>
@@ -49,14 +56,61 @@
         <section class="bg-banner bg-no-repeat bg-cover bg-center py-32">
             <div class="max-w-container mx-auto">
                 <div class="w-[592px]">
-                    <h6 class="text-base uppercase font-robotocondensed text-white font-bold">Welcome to our CHURCH</h6>
-                    <h1 class="text-banner_heading font-robotocondensed uppercase text-white font-bold pt-4 pb-8">Become a part of our community</h1>
-                    <a href="#" class="inline-block bg-primary py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">Learn more</a>
-                    <p class="w-[338px] mt-16 pl-[30px] font-robotocondensed text-base text-white leading-6 relative after:absolute after:content-[''] after:w-[18px] after:h-0.5 after:bg-primary after:left-0 after:top-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</p>
+                    <h6
+                        class="text-base uppercase font-robotocondensed text-white font-bold">Welcome
+                        to our CHURCH</h6>
+                    <h1
+                        class="text-banner_heading font-robotocondensed uppercase text-white font-bold pt-4 pb-8">Become
+                        a part of our community</h1>
+                    <a href="#"
+                        class="inline-block bg-primary py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">Learn
+                        more</a>
+                    <p
+                        class="w-[338px] mt-16 pl-[30px] font-robotocondensed text-base text-white leading-6 relative after:absolute after:content-[''] after:w-[18px] after:h-0.5 after:bg-primary after:left-0 after:top-3">Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do.</p>
                 </div>
             </div>
         </section>
         <!-- ===========banner end here========== -->
-        <script src="tailwind.config.js"></script>
-    </body>
-</html>
+        <!-- ===========service start here========== -->
+        <section class="py-32">
+            <div class="max-w-container mx-auto">
+                <div>
+                    <h5
+                        class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">sub-headline</h5>
+                    <h3
+                        class="uppercase font-robotocondensed leading-[64px] text-5xl text-sub_heading font-bold text-center pt-4">a
+                        church that's relevant</h3>
+                </div>
+                <div class="pt-16 flex gap-[25px] flex-wrap items-center">
+                    <div class="bg-service_item_background p-20 w-[410px] relative after:absolute after:content-[''] after:w-full after:h-4 after:bg-primary after:bottom-0 after:left-0">
+                        <div
+                            class="w-12 h-12 bg-primary rounded-full flex items-center justify-center">
+                            <i class="fa-solid fa-hand-holding-heart text-2xl"></i>
+                        </div>
+                        <h4 class="uppercase font-robotocondensed font-bold text-[32px] leading-[44px] mt-6 mb-2 text-sub_heading">Get involved</h4>
+                        <p class="text-base font-normal font-robotocondensed text-sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="bg-service_item_background p-20 w-[410px] relative after:absolute after:content-[''] after:w-full after:h-4 after:bg-primary after:bottom-0 after:left-0">
+                        <div
+                            class="w-12 h-12 bg-primary rounded-full flex items-center justify-center">
+                            <i class="fa-solid fa-hand-holding-heart text-2xl"></i>
+                        </div>
+                        <h4 class="uppercase font-robotocondensed font-bold text-[32px] leading-[44px] mt-6 mb-2 text-sub_heading">Get involved</h4>
+                        <p class="text-base font-normal font-robotocondensed text-sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="bg-service_item_background p-20 w-[410px] relative after:absolute after:content-[''] after:w-full after:h-4 after:bg-primary after:bottom-0 after:left-0">
+                        <div
+                            class="w-12 h-12 bg-primary rounded-full flex items-center justify-center">
+                            <i class="fa-solid fa-hand-holding-heart text-2xl"></i>
+                        </div>
+                        <h4 class="uppercase font-robotocondensed font-bold text-[32px] leading-[44px] mt-6 mb-2 text-sub_heading">Get involved</h4>
+                        <p class="text-base font-normal font-robotocondensed text-sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+            </section>
+            <!-- ===========service end here========== -->
+            <script src="tailwind.config.js"></script>
+        </body>
+    </html>
