--- a/index.html
+++ b/index.html
@@ -111,6 +111,37 @@
                 </div>
             </section>
             <!-- ===========service end here========== -->
+            <!-- ===========love start here========== -->
+            <section class="pb-32">
+                <div class="max-w-container mx-auto">
+                    <div class="text-center">
+                        <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">SUB-HEADLINE</h5>
+                        <h3 class="text-5xl font-bold font-robotocondensed text-center leading-16  uppercase text-sub_heading pt-4">love and compassion</h3>
+                        <p class="w-[846px] mx-auto text-center text-base font-robotocondensed text-sub_heading font-normal leading-6 pt-8 pb-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <a href="#"
+                        class="inline-block bg-primary py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">read
+                        more</a>
+                    </div>
+                    <div class="w-[1030px] mx-auto mt-12 flex gap-x-6">
+                        <div class="w-[296px] h-[384px] rounded-[32px] overflow-hidden mt-[-64px]">
+                            <img class="w-full h-full object-cover" src="./images/love1.png" alt="">
+                        </div>
+                        <div class="w-[390px] h-[512px] rounded-[32px] overflow-hidden">
+                            <img class="w-full h-full object-cover" src="./images/love2.png" alt="">
+                        </div>
+                        <div class="w-[296px] h-[384px] rounded-[32px] overflow-hidden mt-[-64px]">
+                            <img class="w-full h-full object-cover" src="./images/love3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="pt-16 text-center">
+                        <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">our mission & vision</h5>
+                        <h3 class="text-[32px] font-bold font-robotocondensed text-center leading-[44px] uppercase text-sub_heading pt-4">love and compassion</h3>
+                        <p class="w-[512px] mx-auto text-center text-base font-robotocondensed text-sub_heading font-normal leading-6 py-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <a href="#" class="text-[14px] leading-4 font-normal text-sub_heading capitalize">read more <i class="fa-solid fa-arrow-right-long ml-1.5"></i></a>
+                    </div>
+                </div>
+            </section>
+            <!-- ===========love end here========== -->
             <script src="tailwind.config.js"></script>
         </body>
     </html>
