watch part done

--- a/index.html
+++ b/index.html
@@ -135,13 +135,62 @@
                     </div>
                     <div class="pt-16 text-center">
                         <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">our mission & vision</h5>
-                        <h3 class="text-[32px] font-bold font-robotocondensed text-center leading-[44px] uppercase text-sub_heading pt-4">love and compassion</h3>
-                        <p class="w-[512px] mx-auto text-center text-base font-robotocondensed text-sub_heading font-normal leading-6 py-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <h3 class="text-[32px] font-bold font-robotocondensed text-center leading-[44px] uppercase text-sub_heading pt-4">celebrate WITH US</h3>
+                        <p class="w-[512px] mx-auto text-center text-base font-robotocondensed text-sub_heading font-normal leading-6 py-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <a href="#" class="text-[14px] leading-4 font-normal text-sub_heading capitalize">read more <i class="fa-solid fa-arrow-right-long ml-1.5"></i></a>
                     </div>
                 </div>
             </section>
             <!-- ===========love end here========== -->
+            <!-- ===========watch start here========== -->
+            <section class="py-32 bg-watch_background">
+                <div class="max-w-container mx-auto">
+                    <div class="text-center w-[440px] mx-auto">
+                        <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">Watch and listen</h5>
+                        <h3 class="text-5xl font-bold font-robotocondensed text-center leading-16  uppercase text-sub_heading pt-4">THE benefits of joining our church</h3>
+                    </div>
+                    <div class="pt-16 flex gap-6 flex-wrap">
+                        <div class="w-[302px] h-[384px] overflow-hidden relative group">
+                            <picture>
+                                <img class="w-full h-full object-cover" src="./images/watch.jpg" alt="">
+                            </picture>
+                            <div class="absolute left-0 top-[70%] w-full h-full p-8 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%]">
+                                <h4 class="font-robotocondensed text-2xl font-bold uppercase text-white mb-4">WATCH AND LISTEN TO OUR SERMONS</h4>
+                                <p class="font-robotocondensed font-normal text-base text-white opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                            </div>
+                        </div>
+                        <div class="w-[302px] h-[384px] overflow-hidden relative group">
+                            <picture>
+                                <img class="w-full h-full object-cover" src="./images/watch.jpg" alt="">
+                            </picture>
+                            <div class="absolute left-0 top-[70%] w-full h-full p-8 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%]">
+                                <h4 class="font-robotocondensed text-2xl font-bold uppercase text-white mb-4">WATCH AND LISTEN TO OUR SERMONS</h4>
+                                <p class="font-robotocondensed font-normal text-base text-white opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                            </div>
+                        </div>
+                        <div class="w-[302px] h-[384px] overflow-hidden relative group">
+                            <picture>
+                                <img class="w-full h-full object-cover" src="./images/watch.jpg" alt="">
+                            </picture>
+                            <div class="absolute left-0 top-[70%] w-full h-full p-8 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%]">
+                                <h4 class="font-robotocondensed text-2xl font-bold uppercase text-white mb-4">WATCH AND LISTEN TO OUR SERMONS</h4>
+                                <p class="font-robotocondensed font-normal text-base text-white opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                            </div>
+                        </div>
+                        <div class="w-[302px] h-[384px] overflow-hidden relative group">
+                            <picture>
+                                <img class="w-full h-full object-cover" src="./images/watch.jpg" alt="">
+                            </picture>
+                            <div class="absolute left-0 top-[70%] w-full h-full p-8 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%]">
+                                <h4 class="font-robotocondensed text-2xl font-bold uppercase text-white mb-4">WATCH AND LISTEN TO OUR SERMONS</h4>
+                                <p class="font-robotocondensed font-normal text-base text-white opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div></div>
+                </div>
+            </section>
+            <!-- ===========watch end here========== -->
             <script src="tailwind.config.js"></script>
         </body>
     </html>
