upcoming event part done

--- a/index.html
+++ b/index.html
@@ -191,6 +191,55 @@
                 </div>
             </section>
             <!-- ===========watch end here========== -->
+            <!-- ===========upcoming start here========== -->
+            <section class="py-32">
+                <div class="max-w-container mx-auto">
+                    <div class="text-center w-[554px] mx-auto">
+                        <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">Upcoming SERMONS</h5>
+                        <h3 class="text-5xl font-bold font-robotocondensed text-center leading-16  uppercase text-sub_heading pt-4">join us and become part of something great</h3>
+                    </div>
+                    <div class="mt-16 bg-service_item_background w-full h-[512px] flex">
+                        <div class="w-[435px] h-full py-[61px] px-[90px] relative">
+                            <h5 style="-webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;" class="text-xs uppercase font-robotocondensed font-bold tracking-[0.96px] bg-clip-text bg-text_gradient">Upcoming Event</h5>
+                            <h4 class="py-4 uppercase font-robotocondensed font-bold text- text-sub_heading pr-[105px]">WATCH AND LISTEN TO OUR SERMONS</h4>
+                            <p class="font-normal font-robotocondensed text-sub_heading text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <div class="mt-8 flex gap-4 flex-col">
+                                <div class="flex gap-4 items-start">
+                                    <div>
+                                        <i class="fa-regular fa-clock text-xl"></i>
+                                    </div>
+                                    <div>
+                                        <p class="font-robotocondensed text-base font-normal leading-6 text-sub_heading">Friday 23:39 IST</p>
+                                        <p class="font-robotocondensed text-base font-normal leading-6 text-sub_heading">Saturday 11:20 ISD</p>
+                                    </div>
+                                </div>
+                                <div class="flex gap-4 items-start">
+                                    <div>
+                                        <i class="fa-regular fa-clock text-xl"></i>
+                                    </div>
+                                    <div>
+                                        <p class="font-robotocondensed text-base font-normal leading-6 text-sub_heading">Friday 23:39 IST</p>
+                                        <p class="font-robotocondensed text-base font-normal leading-6 text-sub_heading">Saturday 11:20 ISD</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#" class="mt-8 inline-block bg-sub_heading py-6 px-16 rounded-xl text-primary text-base font-normal uppercase font-robotocondensed leading-4">Register</a>
+                            <div class="w-auto h-auto absolute top-8 right-8 text-center">
+                                <h3 class="font-robotocondensed text-2xl text-sub_heading font-bold leading-none">20</h3>
+                                <span class="font-robotocondensed font-normal text-base text-sub_heading uppercase leading-none">JULY</span>
+                            </div>
+                        </div>
+                        <div class="w-[845px] h-full overflow-hidden">
+                            <img class="w-full h-full object-cover leading-none" src="./images/upcoming_part.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="text-right mt-12">
+                        <a href="#" class="font-robotocondensed font-normal text-2xl text-sub_heading capitalize">View all Sermons <i class="fa-solid fa-arrow-right-long ml-[11px]"></i></a>
+                    </div>
+                </div>
+            </section>
+            <!-- ===========upcoming end here========== -->
             <script src="tailwind.config.js"></script>
         </body>
     </html>
