visit part done

--- a/index.html
+++ b/index.html
@@ -240,6 +240,20 @@
                 </div>
             </section>
             <!-- ===========upcoming end here========== -->
+            <!-- ===========visit start here========== -->
+            <section class="bg-visit_bg bg-no-repeat bg-center bg-cover py-32">
+                <div class="max-w-container mx-auto">
+                    <div class="w-[768px] bg-white mx-auto py-[72px] px-[48px] border-b-[16px] border-primary relative">
+                        <h2 class="uppercase font-robotocondensed font-bold text-5xl leading-[64px] w-[370px] text-sub_heading">We want to serve the world around us</h2>
+                        <p class="py-4 capitalize font-robotocondensed font-normal text-sub_heading text-base w-[302px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</p>
+                        <a href="#" class="inline-block bg-primary py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">Visit</a>
+                        <picture class="absolute top-[170px] right-12">
+                            <img src="./images/visit_icon.png" alt="">
+                        </picture>
+                    </div>
+                </div>
+            </section>
+            <!-- ===========visit end here========== -->
             <script src="tailwind.config.js"></script>
         </body>
     </html>
