--- a/index.html
+++ b/index.html
@@ -254,6 +254,50 @@
                 </div>
             </section>
             <!-- ===========visit end here========== -->
+            <!-- ===========blog start here========== -->
+            <section class="py-32">
+                <div class="max-w-container mx-auto">
+                    <div class="text-center w-[554px] mx-auto">
+                        <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">Read our Blog</h5>
+                        <h3 class="text-5xl font-bold font-robotocondensed text-center leading-16  uppercase text-sub_heading pt-4">SHARE, INSPIRE, INNOVATE</h3>
+                    </div>
+                    <div class="mt-16 flex flex-wrap gap-6">
+                        <div class="bg-service_item_background px-8 py-12 w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
+                            <h5 style="-webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;" class="text-xs uppercase font-robotocondensed font-bold tracking-[0.96px] bg-clip-text bg-text_gradient">Relationship</h5>
+                            <h4 class="py-4 uppercase font-robotocondensed font-bold text- text-sub_heading pr-[105px]">WATCH AND LISTEN TO OUR SERMONS</h4>
+                            <p class="font-normal font-robotocondensed text-sub_heading text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <h4 class="mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
+                            <h5 class="mt-1 font-robotocondensed text-base font-normal text-sub_heading capitalize leading-6">Tuesday 13 May, 2021</h5>
+                        </div>
+                        <div class="bg-service_item_background px-8 py-12 w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
+                            <h5 style="-webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;" class="text-xs uppercase font-robotocondensed font-bold tracking-[0.96px] bg-clip-text bg-text_gradient">Relationship</h5>
+                            <h4 class="py-4 uppercase font-robotocondensed font-bold text- text-sub_heading pr-[105px]">WATCH AND LISTEN TO OUR SERMONS</h4>
+                            <p class="font-normal font-robotocondensed text-sub_heading text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <h4 class="mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
+                            <h5 class="mt-1 font-robotocondensed text-base font-normal text-sub_heading capitalize leading-6">Tuesday 13 May, 2021</h5>
+                        </div>
+                        <div class="bg-service_item_background px-8 py-12 w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
+                            <h5 style="-webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;" class="text-xs uppercase font-robotocondensed font-bold tracking-[0.96px] bg-clip-text bg-text_gradient">Relationship</h5>
+                            <h4 class="py-4 uppercase font-robotocondensed font-bold text- text-sub_heading pr-[105px]">WATCH AND LISTEN TO OUR SERMONS</h4>
+                            <p class="font-normal font-robotocondensed text-sub_heading text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <h4 class="mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
+                            <h5 class="mt-1 font-robotocondensed text-base font-normal text-sub_heading capitalize leading-6">Tuesday 13 May, 2021</h5>
+                        </div>
+                        <div class="bg-service_item_background px-8 py-12 w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
+                            <h5 style="-webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;" class="text-xs uppercase font-robotocondensed font-bold tracking-[0.96px] bg-clip-text bg-text_gradient">Relationship</h5>
+                            <h4 class="py-4 uppercase font-robotocondensed font-bold text- text-sub_heading pr-[105px]">WATCH AND LISTEN TO OUR SERMONS</h4>
+                            <p class="font-normal font-robotocondensed text-sub_heading text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <h4 class="mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
+                            <h5 class="mt-1 font-robotocondensed text-base font-normal text-sub_heading capitalize leading-6">Tuesday 13 May, 2021</h5>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ===========blog end here========== -->
             <script src="tailwind.config.js"></script>
         </body>
     </html>
