footer part done

--- a/index.html
+++ b/index.html
@@ -298,6 +298,75 @@
                 </div>
             </section>
             <!-- ===========blog end here========== -->
+            <!-- ===========footer start here========== -->
+            <footer class="bg-sub_heading py-16 ">
+                <div class="max-w-container mx-auto">
+                    <div class="flex">
+                        <div>
+                            <div>
+                                <img src="./images/logo_footer.png" alt="">
+                            </div>
+                            <span class="inline-block text-white font-robotocondensed uppercase font-normal text-xs pt-4">© Copyright Finsweet 2022</span>
+                            <ul class="pt-8 flex flex-col gap-4">
+                                <li>
+                                    <span class="inline-block text-white font-robotocondensed uppercase font-normal text-xs">(480) 555-0103</span>
+                                </li>
+                                <li>
+                                    <span class="inline-block text-white font-robotocondensed uppercase font-normal text-xs">4517 Washington Ave. </span>
+                                </li>
+                                <li>
+                                    <span class="inline-block text-white font-robotocondensed uppercase font-normal text-xs">finsweet@example.com</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="ml-[260px]">
+                            <h6 class="font-robotocondensed font-normal text-base text-white capitalize">Quicklinks</h6>
+                            <ul class="mt-5 flex flex-col gap-6">
+                                <li>
+                                    <a class="inline-block uppercase font-robotocondensed text-xs text-white opacity-75" href="#">About us</a>
+                                </li>
+                                <li>
+                                    <a class="inline-block uppercase font-robotocondensed text-xs text-white opacity-75" href="#">Sermons</a>
+                                </li>
+                                <li>
+                                    <a class="inline-block uppercase font-robotocondensed text-xs text-white opacity-75" href="#">Events</a>
+                                </li>
+                                <li>
+                                    <a class="inline-block uppercase font-robotocondensed text-xs text-white opacity-75" href="#">Blog</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="ml-[72px]">
+                            <h6 class="font-robotocondensed font-normal text-base text-white capitalize">Connect</h6>
+                            <ul class="mt-5 flex gap-5">
+                                <li>
+                                    <a href="#" class="text-primary">
+                                        <i class="fa-brands fa-facebook text-base text-primary"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-primary">
+                                        <i class="fa-brands fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-primary">
+                                        <i class="fa-brands fa-linkedin"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="ml-[115px]">
+                            <h3 class="uppercase font-robotocondensed font-bold text-white text-[32px] leading-[44px] w-[377px] mb-8">Subscribe to get Latest Updates and News</h3>
+                            <form action="" method="" class="w-[512px] relative border-[1px] rounded-xl">
+                                <input class="outline-0 text-white font-robotocondensed text-base font-normal border-slate-400 p-5 w-full bg-transparent" type="email" placeholder="Yourmail@gmail.com">
+                                <button class=" absolute right-0 top-0 bg-primary py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4" type="submit">Subscribe</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+            <!-- ===========footer end here========== -->
             <script src="tailwind.config.js"></script>
         </body>
     </html>
